--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
   <section id="campo" class="content">
     <h2>O Valor do Campo</h2>
     <p>O campo é a base da nossa existência. É onde a terra gera alimento, cultura e tradição. Cada plantio carrega história e cada colheita sustenta a cidade.</p>
-    <img src="./rural.jpg" alt="Imagem do campo">
+    <img src="./rural1.jpg" alt="Imagem do campo">
   </section>
 
   <section id="cidade" class="content alt">
     <h2>A Vida Urbana</h2>
     <p>Nas cidades, ideias florescem e tecnologias se desenvolvem. O urbano traz inovação, mas depende profundamente do trabalho realizado no campo.</p>
-    <img src="./urbano.jpeg" alt="Imagem da cidade">
+    <img src="./urbano1.webp" alt="Imagem da cidade">
   </section>
 
   <section id="galeria" class="gallery">
     <h2>Galeria</h2>
     <div class="gallery-grid">
-      <img src="images/festa.jpg" alt="Festa típica">
-      <img src="./rural2.jpg" alt="Campo">
-      <img src="./urbano2.jpg" alt="Cidade">
+      <img src="./festaTipica.jpg" alt="Festa típica">
+      <img src="./rural2.webp" alt="Campo">
+      <img src="./urbano2.webp" alt="Cidade">
     </div>
   </section>
 
